--- a/lession/unitlession.ui
+++ b/lession/unitlession.ui
@@ -91,7 +91,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="pushTest">
            <property name="text">
             <string>Test</string>
            </property>
@@ -105,7 +105,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_4">
+          <widget class="QPushButton" name="pushLearn">
            <property name="text">
             <string>Learn</string>
            </property>
