--- a/lession/testdialog.ui
+++ b/lession/testdialog.ui
@@ -185,6 +185,13 @@
                 </property>
                </spacer>
               </item>
+              <item>
+               <widget class="QPushButton" name="pushButton_2">
+                <property name="text">
+                 <string>Check Answer</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </item>
            </layout>
